fixed style on mobile in nav

--- a/assets/_scss/breakpoints/_375up.scss
+++ b/assets/_scss/breakpoints/_375up.scss
@@ -49,6 +49,7 @@
 
       margin-top: 10px;
       margin-left: 5px;
+      padding-bottom: 15px;
     }
 }
 .home-aims-list{
