--- a/assets/_scss/breakpoints/_base.scss
+++ b/assets/_scss/breakpoints/_base.scss
@@ -473,7 +473,7 @@ HEADER STYLES
 
       display: block;
       background-color: $primary-color;
-      margin-top: -6px;
+      margin-top: -10px;
       font-size: 1.5rem;
       font-family: $font-karla;
       position: absolute;
